--- a/DatasetAnalyz_B.ipynb
+++ b/DatasetAnalyz_B.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,39 @@
       "    2010-Q2  19216.0  64736.0  30740.0  86655.0  \n",
       "    2010-Q3  20939.0  66157.0  31556.0  98803.0  \n",
       "    2010-Q4  19837.0  65440.0  30465.0  97197.0  \n",
-      "    2011-Q1  19136.0  66242.0  31488.0  89457.0  \n"
+      "    2011-Q1  19136.0  66242.0  31488.0  89457.0  \n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "             Emp                                                        \\\n",
+      "industry      11       21       22       23       42       51       52   \n",
+      "time                                                                     \n",
+      "2010-Q1   4837.5   8766.5  11597.5  44920.5  60633.0  26304.5  59436.0   \n",
+      "2010-Q2   5604.5   9282.0  11822.0  48534.5  62408.0  26404.0  59474.5   \n",
+      "2010-Q3   6219.0   9774.0  12013.0  55651.0  64719.0  27253.5  60554.0   \n",
+      "2010-Q4   6279.0   9923.5  11252.5  54849.0  64884.5  26227.5  59809.5   \n",
+      "2011-Q1   5033.5   9791.5  11658.5  47151.5  64199.0  26202.0  60125.5   \n",
+      "2011-Q2   5738.5  10311.5  11933.5  51112.5  65970.5  26457.0  60077.5   \n",
+      "2011-Q3   6528.5  10937.5  12502.0  59843.5  68563.0  26772.0  61065.0   \n",
+      "2011-Q4   6411.5  11145.0  12284.5  59250.0  68065.5  26064.0  60174.0   \n",
+      "2012-Q1   5173.0  10901.5  12291.0  52134.0  66983.0  26052.0  60543.0   \n",
+      "2012-Q2   6062.0  11003.5  12279.0  55911.5  68682.5  26163.5  61902.0   \n",
+      "2012-Q3   6724.5  10987.0  12831.5  62563.0  70860.0  27026.0  63940.0   \n",
+      "2012-Q4   6477.0  10901.0  12906.5  61830.5  70386.0  26308.0  63215.5   \n",
+      "\n",
+      "                                              \n",
+      "industry       53       54       55       56  \n",
+      "time                                          \n",
+      "2010-Q1   17162.5  61923.5  29250.5  69360.5  \n",
+      "2010-Q2   17662.0  64587.5  29918.5  74252.5  \n",
+      "2010-Q3   18955.0  64234.0  30656.0  82581.0  \n",
+      "2010-Q4   17970.0  63626.0  29887.5  82268.5  \n",
+      "2011-Q1   17336.0  65377.0  31201.5  76993.0  \n",
+      "2011-Q2   17826.0  68153.5  32101.0  81277.0  \n",
+      "2011-Q3   19289.0  68265.5  33480.5  87973.5  \n",
+      "2011-Q4   18159.0  67202.5  33338.5  88295.5  \n",
+      "2012-Q1   17480.0  66479.0  34639.5  82371.0  \n",
+      "2012-Q2   18006.5  69394.5  35398.5  85645.0  \n",
+      "2012-Q3   19355.0  69466.0  36673.0  91258.5  \n",
+      "2012-Q4   18501.0  68343.5  35936.0  90176.0  \n"
      ]
     }
    ],
@@ -113,12 +145,16 @@
     "\n",
     "print(df_bysex.head())\n",
     "#type(df_bysex)\n",
+    "print(type(df_bysex))\n",
     "#df_bySexTimeInd = df_bysex.pivot(index=\"time\", columns=\"industry\", values=\"Emp\")\n",
+    "df_bySexTimeInd = df_bysex.pivot_table(index='time', columns=None, values=None)\n",
     "#print(df_bySexTimeInd)\n",
+    "print(df_bySexTimeInd)\n",
     "#, columns=None, values=None)\n",
     "\n",
     "\n",
     "#pd.wide_to_long\n",
+    "# Explore Dataset with .columns and .index\n",
     "# Generating a dataframe using sql coding in Python.\n",
     "# Subsetting (filters)\n",
     "# Merge, append, join functions\n",
@@ -175,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
